--- a/composer.json
+++ b/composer.json
@@ -1,45 +1,33 @@
 {
-    "autoload": {
-        "psr-0": {
-            "": "src/",
-            "SymfonyStandard": "app/"
-        }
-    },
-    "config": {
-        "bin-dir": "bin"
-    },
-    "description": "The \"Symfony Standard Edition\" distribution",
-    "extra": {
-        "branch-alias": {
-            "dev-master": "2.5-dev"
-        },
-        "incenteev-parameters": {
-            "file": "app/config/parameters.yml"
-        },
-        "symfony-app-dir": "app",
-        "symfony-web-dir": "web"
-    },
-    "license": "MIT",
-    "minimum-stability": "dev",
     "name": "symfony/framework-standard-edition",
+    "license": "MIT",
+    "type": "project",
+    "description": "The \"Symfony Standard Edition\" distribution",
+    "autoload": {
+        "psr-0": { "": "src/", "SymfonyStandard": "app/" }
+    },
     "require": {
-        "doctrine/doctrine-bundle": "~1.2",
-        "doctrine/orm": "~2.2,>=2.2.3",
-        "friendsofsymfony/user-bundle": "2.0.*@dev",
-        "incenteev/composer-parameter-handler": "~2.0",
         "php": ">=5.3.3",
+        "symfony/symfony": "2.5.*",
+        "doctrine/orm": "~2.2,>=2.2.3",
+        "doctrine/doctrine-bundle": "~1.2",
+        "twig/extensions": "~1.0",
+        "symfony/assetic-bundle": "~2.3",
+        "symfony/swiftmailer-bundle": "~2.3",
+        "symfony/monolog-bundle": "~2.4",
         "sensio/distribution-bundle": "~3.0",
         "sensio/framework-extra-bundle": "~3.0",
-        "symfony/assetic-bundle": "~2.3",
-        "symfony/monolog-bundle": "~2.4",
-        "symfony/swiftmailer-bundle": "~2.3",
-        "symfony/symfony": "2.5.*",
-        "twig/extensions": "~1.0"
+        "incenteev/composer-parameter-handler": "~2.0",
+        "doctrine/doctrine-fixtures-bundle": "~2.2",
+        "friendsofsymfony/user-bundle": "1.3.5"
     },
     "require-dev": {
         "sensio/generator-bundle": "~2.3"
     },
     "scripts": {
+        "post-root-package-install": [
+            "SymfonyStandard\\Composer::hookRootPackageInstall"
+        ],
         "post-install-cmd": [
             "Incenteev\\ParameterHandler\\ScriptHandler::buildParameters",
             "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::buildBootstrap",
@@ -47,9 +35,6 @@
             "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::installAssets",
             "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::installRequirementsFile",
             "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::removeSymfonyStandardFiles"
-        ],
-        "post-root-package-install": [
-            "SymfonyStandard\\Composer::hookRootPackageInstall"
         ],
         "post-update-cmd": [
             "Incenteev\\ParameterHandler\\ScriptHandler::buildParameters",
@@ -60,5 +45,17 @@
             "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::removeSymfonyStandardFiles"
         ]
     },
-    "type": "project"
+    "config": {
+        "bin-dir": "bin"
+    },
+    "extra": {
+        "symfony-app-dir": "app",
+        "symfony-web-dir": "web",
+        "incenteev-parameters": {
+            "file": "app/config/parameters.yml"
+        },
+        "branch-alias": {
+            "dev-master": "2.5-dev"
+        }
+    }
 }
