--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,4 +1,7 @@
 crm_core:
     resource: "@CRMCoreBundle/Resources/config/routing.yml"
     prefix:   /
+    
+fos_user:
+    resource: "@FOSUserBundle/Resources/config/routing/all.xml"
 
