--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -7,17 +7,24 @@ security:
         ROLE_SUPER_ADMIN: ROLE_ADMIN
 
     providers:
-        fos_userbundle:
+        main:
             id: fos_user.user_provider.username
 
     firewalls:
+        # … le pare-feu « dev »
+        # Firewall principal pour le reste de notre site
         main:
-            pattern: ^/
+            pattern:        ^/
+            anonymous:      true
+            provider:       main
             form_login:
-                provider: fos_userbundle
-                csrf_provider: form.csrf_provider
-            logout:       true
-            anonymous:    true
+                login_path: fos_user_security_login
+                check_path: fos_user_security_check
+            logout:
+                path:       fos_user_security_logout
+                target:     /platform
+            remember_me:
+                key:        %secret% # %secret% est un paramètre de parameters.yml
 
     access_control:
         - { path: ^/login$, role: IS_AUTHENTICATED_ANONYMOUSLY }
