--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -11,7 +11,6 @@ security:
             id: fos_user.user_provider.username
 
     firewalls:
-        # … le pare-feu « dev »
         # Firewall principal pour le reste de notre site
         main:
             pattern:        ^/
@@ -22,7 +21,7 @@ security:
                 check_path: fos_user_security_check
             logout:
                 path:       fos_user_security_logout
-                target:     /platform
+                target:     /
             remember_me:
                 key:        %secret% # %secret% est un paramètre de parameters.yml
 
