bundle client : ajout, evenement update et persist

--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,6 +1,6 @@
 crm_account:
     resource: "@CRMAccountBundle/Resources/config/routing.yml"
-    prefix:   /
+    prefix:   /account
 
 crm_core:
     resource: "@CRMCoreBundle/Resources/config/routing.yml"
