--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -79,3 +79,8 @@ fos_user:
     db_driver: orm # other valid values are 'mongodb', 'couchdb' and 'propel'
     firewall_name: main
     user_class: CRM\UserBundle\Entity\User
+
+stof_doctrine_extensions:
+    orm:
+        default:
+            sluggable: true
