--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -9,3 +9,9 @@ crm_core:
 fos_user:
     resource: "@FOSUserBundle/Resources/config/routing/all.xml"
 
+#REST 
+rest : 
+  type : rest 
+  resource : "routing_rest.yml"
+  prefix : /api
+
