--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -27,6 +27,9 @@ security:
 
     access_control:
         - { path: ^/login$, role: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/login_check$, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/register, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/resetting, role: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/api/, role: ROLE_USER }
+        - { path: ^/account/, role: ROLE_USER }
         - { path: ^/admin/, role: ROLE_ADMIN }
