--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,9 @@
         "incenteev/composer-parameter-handler": "~2.0",
         "doctrine/doctrine-fixtures-bundle": "~2.2",
         "friendsofsymfony/user-bundle": "~2.0@dev",
-        "stof/doctrine-extensions-bundle": "~1.1"
+        "stof/doctrine-extensions-bundle": "~1.1",
+        "friendsofsymfony/rest-bundle": "1.5.*@dev",
+        "jms/serializer-bundle": "0.13.*@dev"
     },
     "require-dev": {
         "sensio/generator-bundle": "~2.3"
